tapestry-ioc-jcache: try to make it work with Java 21