@@ -28,3 +28,15 @@ tasks.named('jar', Jar) {
         attributes 'Tapestry-Module-Classes': 'org.apache.tapestry5.jcache.module.JCacheModule'
     }
 }
+
+
+test {
+    if (JavaVersion.current().isJava9Compatible()) {
+            jvmArgs '--add-opens', 'java.base/java.util=ALL-UNNAMED'
+            jvmArgs '--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED'
+            jvmArgs '--add-opens', 'java.base/java.io=ALL-UNNAMED'
+            jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
+            jvmArgs '--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED'
+            jvmArgs '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED'
+    }
+}
